tests/multi_assign_arity_bad.stderr
tests/multi_assign_arity_bad.hop:4:2: error: HOP2005: call arity mismatch
