tests/multi_assign_arity_bad.hop
// Verifies multi assign arity is rejected.
fn main() {
	var x, y = 1, 2
	x, y = 3
}
